--- a/website/index.html
+++ b/website/index.html
@@ -181,17 +181,14 @@
         <section id="experience">
             <h2>Experience</h2>
             <div class="experience">
-                <strong>Software Engineering Intern</strong> - ABC Corp (Jun 2024 - Aug 2024)<br>
+                <strong>Data Analyst</strong> - GEOsystems Research & Consultants Pvt. Ltd. (July 2023 – May 2024)<br>
                 <ul>
-                    <li>Developed web applications using React and Node.js</li>
-                    <li>Worked on data analysis and visualization tasks</li>
-                    <li>Collaborated with cross-functional teams</li>
+                    <li>Researched, developed, and implemented a fully automated program that eliminated the need for manual data entry, saving the team more than 20 hours per week</li>
+                    <li>Managed Google Workspace and Cloud, improving team efficiency</li>
+                    <li>Created and maintained multiple Power BI and Excel dashboards for real-time insights</li>
+                    <li>Worked with cross-functional teams to understand their needs and utilized SQL to fetch the relevant data to support business decisions</li>
                 </ul>
-                <strong>Research Assistant</strong> - XYZ University (Jan 2023 - May 2023)<br>
-                <ul>
-                    <li>Built machine learning models for academic research</li>
-                    <li>Published findings in university journal</li>
-                </ul>
+
             </div>
         </section>
         <section id="achievements">
